--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -362,6 +362,7 @@ footer {
     width: 5.875rem;
     height: 5.25rem;
   }
+  /* projects */
   .projects-container {
     flex-direction: column;
   }
