--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -207,7 +207,8 @@ nav ul li {
 
 .project-container {
   text-align: center;
-  width: 21.875rem; 
+  width: 21.875rem;
+  width:500px; 
   padding: 1rem;
   
  
