style: fixed color

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,9 +9,12 @@
   --primary-color: #457b9d;
   --primary-color:#00acee;
   --primary-color:#1d3557;
+  --primary-color:#3b5998;
   --secondary-color: #000;
   --primary-shadow: #8b8eaf;
+  --primary-shadow: #dfe3ee;
   --secondary-shadow: #a17a69;
+  --secondary-shadow: #f7f7f7;
   --bottom-margin: 0.5rem;
   --bottom-margin-2: 1rem;
   --line-height: 1.7rem;
