build: updated projects section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,11 +7,13 @@
   --bold-font: 700;
   --bolder-font: 900;
   --bg-color: #FCFCFC;
+  /* --bg-color: #131414; */
   --primary-color: #457b9d;
   --primary-color:#00acee;
   --primary-color:#1d3557;
   --primary-color:#3b5998;
   --primary-color:#1484C0;
+  /* --primary-color:#adb0b1; */
   --secondary-color: #000;
   --primary-shadow: #8b8eaf;
   --primary-shadow: #dfe3ee;
